test/official_tests/super/no_superclass_call.lox
class Base {
  foo() {
    super.doesNotExist(1); // error: {"line":3,"message":"Can't use 'super' in a class with no superclass","type":"RuntimeError"}
  }
}

Base().foo();
